--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "java",
-            "name": "Launch Java Program",
+            "name": "Launch Server",
             "request": "launch",
-            "mainClass": ""
+            "mainClass": "app.Server"
+        },
+        {
+            "type": "java",
+            "name": "Launch Client",
+            "request": "launch",
+            "mainClass": "app.Client"
         },
     ]
 }
